# telfhash-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: hash_fixtures.rs
src/: lib.rs  main.rs
src/application/: analysis.rs  mod.rs  service.rs
src/domain/: error.rs  exclusions.rs  mod.rs  model.rs  ports.rs
src/domain/grouping/: common.rs  compatible.rs  connected.rs  mod.rs
src/infrastructure/: mod.rs  path.rs  telemetry.rs  tlsh.rs
src/infrastructure/elf/: arch.rs  code_region.rs  disasm_fallback.rs  mod.rs  symbol_table.rs
src/interfaces/: cli.rs  cli_mapper.rs  debug.rs  legacy.rs  mod.rs  output.rs  sarif.rs
tests/: architecture_contracts.rs  integration_cli.rs  public_api.rs
tests/fixtures/disasm/: aarch64.txt  arm.txt  mips.txt  x64.txt  x86.txt
tests/golden/: group_connected.txt  hash.json  hash.sarif  hash.tsv  hash_compatible.txt  hash_plain.txt
